src/snapshots/crunchie_core__tests__distiller_poison.snap
---
source: src/tests.rs
expression: output
---
Input: 1.2.3
Workspace {
  Diagnostics:
    - MalformedSymbol at offset 0
  Lines:
    Line 1:
      [Container 7] 
        [POISON]
}
