src/snapshots/crunchie_core__tests__distiller_smart_splitting_garbage.snap
---
source: src/tests.rs
expression: output
---
Input: 65kg123
Workspace {
  Diagnostics:
    - MalformedSymbol at offset 0
  Lines:
    Line 1:
      [Container 7] 
        [POISON]
}
