src/snapshots/crunchie_core__tests__stray_closer.snap
---
source: src/tests.rs
expression: output
---
Input: 5)
Workspace {
  Diagnostics:
    - StrayCloser at offset 1
  Lines:
    Line 1:
      [Container 7] 
        [Value] 5
}
