src/snapshots/crunchie_core__tests__unclosed_container.snap
---
source: src/tests.rs
expression: output
---
Input: x = (5
Workspace {
  Diagnostics:
    - UnclosedContainer at offset 0
  Lines:
    Line 1:
      [Container 11] 
        [Instr] Fend(Equals)
          [Var] x
          [Value] 5
}
